Save uncommitted changes
